Also call renewImage() for 8-bit Gray images

That was the only format where it was not called...
I simulated a crash with the exact same backtrace to
BUG: 469683
by using the test device in hand scanner 8-bit gray mode.